--- a/PayBackend/CMakeLists.txt
+++ b/PayBackend/CMakeLists.txt
@@ -30,6 +30,7 @@ endif ()
 aux_source_directory(controllers CTL_SRC)
 aux_source_directory(filters FILTER_SRC)
 aux_source_directory(plugins PLUGIN_SRC)
+aux_source_directory(utils UTILS_SRC)
 aux_source_directory(models MODEL_SRC)
 
 drogon_create_views(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/views
@@ -50,6 +51,7 @@ target_sources(${PROJECT_NAME}
                ${CTL_SRC}
                ${FILTER_SRC}
                ${PLUGIN_SRC}
+               ${UTILS_SRC}
                ${MODEL_SRC})
 
 add_subdirectory(test)
