Test pay_idempotency ORM roundtrip

--- a/PayBackend/test/CMakeLists.txt
+++ b/PayBackend/test/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(
     ${TEST_SRC}
     ../filters/PayAuthFilter.cc
     ../filters/PayAuthMetrics.cc
+    ../models/PayIdempotency.cc
     ../plugins/WechatPayClient.cc
     ../utils/PayUtils.cc
 )
