Add PayAuthMetrics test and C++17 test config

--- a/PayBackend/test/CMakeLists.txt
+++ b/PayBackend/test/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 project(PayBackendTests CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 find_package(Drogon CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
 
@@ -8,6 +12,7 @@ set(TEST_SRC
     IdempotencyIntegrationTest.cc
     test_main.cc
     PayAuthFilterTest.cc
+    PayAuthMetricsTest.cc
     PayUtilsTest.cc
     WechatPayClientTest.cc
 )
