test: cover refund query without wechat

--- a/PayBackend/test/CMakeLists.txt
+++ b/PayBackend/test/CMakeLists.txt
@@ -17,6 +17,7 @@ set(TEST_SRC
     PayUtilsTest.cc
     WechatPayClientTest.cc
     WechatCallbackIntegrationTest.cc
+    RefundQueryTest.cc
 )
 
 add_executable(
