test: add query order without wechat client

--- a/PayBackend/test/CMakeLists.txt
+++ b/PayBackend/test/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TEST_SRC
     PayAuthFilterTest.cc
     PayAuthMetricsTest.cc
     PayUtilsTest.cc
+    QueryOrderTest.cc
     WechatPayClientTest.cc
     WechatCallbackIntegrationTest.cc
     RefundQueryTest.cc
